Fix stereotype feature actions/listeners not registering